@@ -2,6 +2,8 @@ Revision history for Perl-Critic-MergeProfile
 
 {{$NEXT}}
 
+  - Updated documentation
+
 0.001  2018-07-03 21:57:51 UTC
 
   - Initial release
